--- a/GUI_JavaJam/Views/Home/Music.cshtml
+++ b/GUI_JavaJam/Views/Home/Music.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <dl>
     <dt><strong>January</strong></dt>
-    <dd><img src="images/melaniethumb.jpg"/></dd>
+    <dd><img src="~/images/melaniethumb.jpg" /></dd>
     <dd>
         Melanie Morris entertains with her melodic folk style.
         Check out the podcast!
@@ -9,11 +9,11 @@
     </dd>
 
     <dt><strong>February</strong></dt>
-    <dd><img src="images/gregthumb.jpg"/></dd>
+    <dd><img src="~/images/gregthumb.jpg" /></dd>
     <dd>
         Tahoe Greg's back from his tour.
-        New songs. 
+        New songs.
         New stories.
-        CDs are no awailable.
+        CDs are no available.
     </dd>
 </dl>
